--- a/src/components/CybersecurityPage.css
+++ b/src/components/CybersecurityPage.css
@@ -32,7 +32,7 @@
   }
   
   .subheading {
-    font-size: 1.25rem !important; 
+    font-size: 1.5vw !important; 
     margin: 20px 0;
     color: #ccc;
   }
